<resources>
  <string name="app_name">Catalogue</string>

  <!-- Budapest -->
  <string name="name">Name</string>
  <string name="hello_stranger">Hello, stranger!</string>
  <string name="template_greeting">Hello, %s!</string>

  <!-- Counter -->
  <string name="increment">Increment</string>
  <string name="decrement">Decrement</string>

  <!-- BMI -->
  <string name="weight">Weight</string>
  <string name="height">Height</string>
  <string name="very_severely_underweight">Very Severely Underweight</string>
  <string name="severely_underweight">Severely Underweight</string>
  <string name="underweight">Underweight</string>
  <string name="normal">Normal</string>
  <string name="overweight">Overweight</string>
  <string name="obese_class_1">Obese Class I</string>
  <string name="obese_class_2">Obese Class II</string>
  <string name="obese_class_3">Obese Class III</string>
  <string name="obese_class_4">Obese Class IV</string>
  <string name="obese_class_5">Obese Class V</string>
  <string name="obese_class_6">Obese Class VI</string>
  <string name="template_bmi">%.1f</string>
  <string name="template_weight_si">%.1f kg</string>
  <string name="template_height_si">%.1f cm</string>
  <string name="template_weight_imperial">%.2f lb</string>
  <string name="template_height_imperial">%.2f ft</string>
  <string name="si_units">SI Units</string>
  <string name="imperial_units">Imperial Units</string>

  <!-- Sign Up -->
  <string name="username">Username</string>
  <string name="phone_number">Phone Number</string>
  <string name="sign_up">Sign Up</string>

  <!-- Smiley -->
  <string name="pick_smiley">Pick Smiley</string>
  <string name="emoji_thumbs_up">&#x1F44D;</string> <!-- Courtesy: https://www.quackit.com/character_sets/emoji/ -->
  <string name="emoji_rolling_eyes">&#x1F644;</string>
  <string name="emoji_victory_hand">&#x270C;</string>
  <string name="pick_smiley_cancelled">You didn\'t pick a smiley.</string>
</resources>
