<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <android.support.design.widget.TextInputLayout
    android:id="@+id/usernameTextInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/usernameEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username"
      />
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/phoneNumberTextInputLayout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toEndOf="@+id/usernameTextInputLayout"
    app:layout_constraintStart_toStartOf="@+id/usernameTextInputLayout"
    app:layout_constraintTop_toBottomOf="@+id/usernameTextInputLayout"
    >

    <android.support.design.widget.TextInputEditText
      android:id="@+id/phoneNumberEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/phone_number"
      />
  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/signUpButton"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/sign_up"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/phoneNumberTextInputLayout"
    app:layout_constraintStart_toStartOf="@+id/phoneNumberTextInputLayout"
    />
</android.support.constraint.ConstraintLayout>
